--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -2,7 +2,7 @@
   "Header": {
     "name": "Geisiel Melo",
     "dev": "Full Stack Developer",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi.",
+    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
     "options": {
       "about": {
         "title": "sobre",
@@ -15,6 +15,43 @@
       "projects": {
         "title": "projetos",
         "href": "#projects"
+      }
+    }
+  },
+
+  "About": {
+    "title": "about",
+    "paragraph": {
+      "p1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
+      "p2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
+      "p3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
+      "p4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!"
+    }
+  },
+
+  "Experience": {
+    "title": "experience",
+    "card": {
+      "c1": {
+        "start": "2000",
+        "end": "2024",
+        "title": "Software Engineer",
+        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
+        "tags": "Node, TypeScript, React, TailwindCSS"
+      },
+      "c2": {
+        "start": "2000",
+        "end": "2024",
+        "title": "Software Engineer",
+        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
+        "tags": "Node, TypeScript, React, TailwindCSS"
+      },
+      "c3": {
+        "start": "2000",
+        "end": "2024",
+        "title": "Software Engineer",
+        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
+        "tags": "Node, TypeScript, React, TailwindCSS"
       }
     }
   }
