feat: updated build

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -32,27 +32,30 @@
 
   "Experience": {
     "title": "experience",
-    "card": {
+    "cards": {
       "c1": {
         "start": "2000",
         "end": "2024",
         "title": "Software Engineer",
         "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
-        "tags": "Node, TypeScript, React, TailwindCSS"
+        "tags": "Node, TypeScript, React, TailwindCSS",
+        "href": ""
       },
       "c2": {
         "start": "2000",
         "end": "2024",
         "title": "Software Engineer",
         "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
-        "tags": "Node, TypeScript, React, TailwindCSS"
+        "tags": "Node, TypeScript, React, TailwindCSS",
+        "href": ""
       },
       "c3": {
         "start": "2000",
         "end": "2024",
         "title": "Software Engineer",
         "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
-        "tags": "Node, TypeScript, React, TailwindCSS"
+        "tags": "Node, TypeScript, React, TailwindCSS",
+        "href": ""
       }
     }
   }
