--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -34,27 +34,27 @@
     "title": "experience",
     "cards": {
       "c1": {
-        "start": "2000",
-        "end": "2024",
-        "title": "Software Engineer",
+        "start": "2024",
+        "end": "Today",
+        "title": "Full Stack Developer · UniFTC",
         "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
-        "tags": "Node, TypeScript, React, TailwindCSS",
+        "tags": "SQL, TypeScript, Next, Nest, TailwindCSS, PHP",
         "href": ""
       },
       "c2": {
-        "start": "2000",
+        "start": "2020",
         "end": "2024",
-        "title": "Software Engineer",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
-        "tags": "Node, TypeScript, React, TailwindCSS",
+        "title": "Full Stack Developer · Freelancer",
+        "description": "Full-stack development of web applications using modern technologies such as MongoDB, Express, React, Node, and TypeScript. Development of APIs and interfaces with a focus on user experience enhancement. Implementation of robust programming practices, including version control with Git. Active participation in all stages of application development cycle, from planning to launch.",
+        "tags": "MongoDB, Express, React, TailwindCSS, TypeScript",
         "href": ""
       },
       "c3": {
-        "start": "2000",
-        "end": "2024",
-        "title": "Software Engineer",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
-        "tags": "Node, TypeScript, React, TailwindCSS",
+        "start": "2020",
+        "end": "2022",
+        "title": "Front-end Developer · Loja TrapStar",
+        "description": "Developed, maintained, and deployed production code for client websites, primarily utilizing HTML, CSS, and JavaScript. Collaborated  with the design team to promote a cohesive team environment and ensure consistent user experiences. Performed quality tests to ensure cross browser compatibility, speed and responsiveness.",
+        "tags": "HTML, CSS, JavaScript",
         "href": ""
       }
     }
@@ -66,7 +66,7 @@
       "c1": {
         "title": "Vacancies",
         "description": "Vacancies were created as an improved method for efficiently organizing your applications.",
-        "image": "https://raw.githubusercontent.com/GeisielMelo/v3/main/public/img/vacancies.png",
+        "image": "/img/vacancies.png",
         "git": "https://github.com/GeisielMelo/vacancies",
         "live": "https://vacancies-client.vercel.app/",
         "tags": "Express, Mongodb, Node, React, Tailwind CSS"
@@ -74,7 +74,7 @@
       "c2": {
         "title": "TMDb",
         "description": "An app created in my free time with the aim of being a front-end-only application powered by data from TheMovieDB.",
-        "image": "https://raw.githubusercontent.com/GeisielMelo/v3/main/public/img/tmdb.png",
+        "image": "/img/tmdb.png",
         "git": "https://github.com/GeisielMelo/TMDb",
         "live": "https://tmdb.geisielmelo.vercel.app/",
         "tags": "Firebase, Lucide, React, Swiper, Tailwind CSS"
@@ -82,7 +82,7 @@
       "c3": {
         "title": "Profile Visualizer",
         "description": "A more effective way to view user information through graphs and statistics.",
-        "image": "https://raw.githubusercontent.com/GeisielMelo/v3/main/public/img/profilevizualizer.png",
+        "image": "/img/profilevizualizer.png",
         "git": "https://github.com/GeisielMelo/Profile-visualizer",
         "live": "https://profile-visualizer.vercel.app/",
         "tags": "Node, React, Styled Components, Typescript"
@@ -90,7 +90,7 @@
       "c4": {
         "title": "GNM-Chat",
         "description": "A complete chat platform where you can add contacts and send real-time messages, very simple to use and fully responsive.",
-        "image": "https://raw.githubusercontent.com/GeisielMelo/v3/main/public/img/gnmchat.png",
+        "image": "/img/gnmchat.png",
         "git": "https://github.com/GeisielMelo/GNM-Chat",
         "live": "https://gnm-chat.vercel.app/",
         "tags": "Firebase, Lucide, React, Tailwind CSS"
