--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -2,7 +2,7 @@
   "Header": {
     "name": "Geisiel Melo",
     "dev": "Full Stack Developer",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
+    "description": "Construir experiências digitais excepcionais é a minha especialidade como desenvolvedor.",
     "options": {
       "about": {
         "title": "sobre",
@@ -20,12 +20,12 @@
   },
 
   "About": {
-    "title": "about",
+    "title": "sobre",
     "paragraph": {
-      "p1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
-      "p2": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
-      "p3": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!",
-      "p4": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque sequi ducimus!"
+      "p1": "Sou uma pessoa movida por desafios e comprometida em entregar o melhor resultado no menor tempo possível. Para mim, não basta apenas criar algo funcional; busco ir além, unindo design atrativo, usabilidade intuitiva e desempenho impecável — tanto na interface quanto no código.",
+      "p2": "Atualmente, atuo como desenvolvedor web na UniFTC, com foco em acessibilidade e performance. Nos últimos meses, mergulhei de cabeça na criação de sites, APIs e integrações, garantindo que cada projeto funcione perfeitamente e ofereça aos usuários uma experiência única e fluida.",
+      "p3": "Minha jornada começou desenvolvendo soluções para trabalhadores autônomos e pequenos empresários. Esse período foi transformador, pois me permitiu explorar diversas tecnologias e entender as necessidades específicas de cada cliente, moldando a maneira como abordo os projetos hoje.",
+      "p4": "Nas horas vagas, gosto de recarregar as energias jogando com amigos ou me perdendo em boas séries."
     }
   },
 
@@ -36,7 +36,7 @@
         "start": "2024",
         "end": "Today",
         "title": "Full Stack Developer · UniFTC",
-        "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi. Quas cupiditate, atque voluptas recusandae voluptates id corporis officia minus ullam corrupti at harum alias, sit autem iusto officiis temporibus.",
+        "description": "Desenvolvimento de websites com foco em acessibilidade e performance. | Criação de APIs robustas e funcionais. | Integração de sistemas para garantir comunicação eficiente entre diferentes plataformas. | Garantia de que todos os projetos entreguem uma experiência fluida e excepcional aos usuários. | Solução de problemas e otimização de processos para manter os projetos funcionando perfeitamente.",
         "tags": "SQL, TypeScript, Next, Nest, TailwindCSS, PHP",
         "href": ""
       },
@@ -44,7 +44,7 @@
         "start": "2020",
         "end": "2024",
         "title": "Full Stack Developer · Freelancer",
-        "description": "Full-stack development of web applications using modern technologies such as MongoDB, Express, React, Node, and TypeScript. Development of APIs and interfaces with a focus on user experience enhancement. Implementation of robust programming practices, including version control with Git. Active participation in all stages of application development cycle, from planning to launch.",
+        "description": "Desenvolvimento full-stack de aplicações web utilizando tecnologias modernas, como MongoDB, Express, React, Node e TypeScript. | Criação de APIs e interfaces com foco na melhoria da experiência do usuário. | Implementação de práticas de programação robustas, incluindo controle de versão com Git. | Participação ativa em todas as etapas do ciclo de desenvolvimento de aplicações, desde o planejamento até o lançamento.",
         "tags": "MongoDB, Express, React, TailwindCSS, TypeScript",
         "href": ""
       },
@@ -52,7 +52,7 @@
         "start": "2020",
         "end": "2022",
         "title": "Front-end Developer · Loja TrapStar",
-        "description": "Developed, maintained, and deployed production code for client websites, primarily utilizing HTML, CSS, and JavaScript. Collaborated  with the design team to promote a cohesive team environment and ensure consistent user experiences. Performed quality tests to ensure cross browser compatibility, speed and responsiveness.",
+        "description": "Desenvolvimento, manutenção e implantação de código em produção para sites de clientes, utilizando principalmente HTML, CSS e JavaScript. | Colaboração com a equipe de design para promover um ambiente de trabalho coeso e garantir experiências de usuário consistentes. | Realização de testes de qualidade para assegurar compatibilidade entre navegadores, velocidade e responsividade.",
         "tags": "HTML, CSS, JavaScript",
         "href": ""
       }
@@ -64,7 +64,7 @@
     "cards": {
       "c1": {
         "title": "Vacancies",
-        "description": "Vacancies were created as an improved method for efficiently organizing your applications.",
+        "description": "Vacancies foi um projeto desenvolvido como um método aprimorado para organizar suas candidaturas de forma mais eficiente.",
         "image": "/img/vacancies.png",
         "git": "https://github.com/GeisielMelo/vacancies",
         "live": "https://vacancies-client.vercel.app/",
@@ -72,7 +72,7 @@
       },
       "c2": {
         "title": "TMDb",
-        "description": "An app created in my free time with the aim of being a front-end-only application powered by data from TheMovieDB.",
+        "description": "Um aplicativo criado no meu tempo livre com o objetivo de ser uma aplicação exclusivamente front-end alimentada por dados do TheMovieDB.",
         "image": "/img/tmdb.png",
         "git": "https://github.com/GeisielMelo/TMDb",
         "live": "https://tmdb.geisielmelo.vercel.app/",
@@ -80,7 +80,7 @@
       },
       "c3": {
         "title": "Profile Visualizer",
-        "description": "A more effective way to view user information through graphs and statistics.",
+        "description": "Uma forma mais eficaz de visualizar informações dos usuários por meio de gráficos e estatísticas.",
         "image": "/img/profilevizualizer.png",
         "git": "https://github.com/GeisielMelo/Profile-visualizer",
         "live": "https://profile-visualizer.vercel.app/",
@@ -88,7 +88,7 @@
       },
       "c4": {
         "title": "GNM-Chat",
-        "description": "A complete chat platform where you can add contacts and send real-time messages, very simple to use and fully responsive.",
+        "description": "Uma plataforma de chat completa onde você pode adicionar contatos e enviar mensagens em tempo real, muito simples de usar e totalmente responsiva.",
         "image": "/img/gnmchat.png",
         "git": "https://github.com/GeisielMelo/GNM-Chat",
         "live": "https://gnm-chat.vercel.app/",
