raw: updated images

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -66,7 +66,7 @@
       "c1": {
         "title": "Vacancies",
         "description": "Vacancies were created as an improved method for efficiently organizing your applications.",
-        "image": "/img/vacancies.png",
+        "image": "/img/vacancies.webp",
         "git": "https://github.com/GeisielMelo/vacancies",
         "live": "https://vacancies-client.vercel.app/",
         "tags": "Express, Mongodb, Node, React, Tailwind CSS"
@@ -74,7 +74,7 @@
       "c2": {
         "title": "TMDb",
         "description": "An app created in my free time with the aim of being a front-end-only application powered by data from TheMovieDB.",
-        "image": "/img/tmdb.png",
+        "image": "/img/tmdb.webp",
         "git": "https://github.com/GeisielMelo/TMDb",
         "live": "https://tmdb.geisielmelo.vercel.app/",
         "tags": "Firebase, Lucide, React, Swiper, Tailwind CSS"
@@ -82,7 +82,7 @@
       "c3": {
         "title": "Profile Visualizer",
         "description": "A more effective way to view user information through graphs and statistics.",
-        "image": "/img/profilevizualizer.png",
+        "image": "/img/profilevizualizer.webp",
         "git": "https://github.com/GeisielMelo/Profile-visualizer",
         "live": "https://profile-visualizer.vercel.app/",
         "tags": "Node, React, Styled Components, Typescript"
@@ -90,7 +90,7 @@
       "c4": {
         "title": "GNM-Chat",
         "description": "A complete chat platform where you can add contacts and send real-time messages, very simple to use and fully responsive.",
-        "image": "/img/gnmchat.png",
+        "image": "/img/gnmchat.webp",
         "git": "https://github.com/GeisielMelo/GNM-Chat",
         "live": "https://gnm-chat.vercel.app/",
         "tags": "Firebase, Lucide, React, Tailwind CSS"
